tests/errors/ordre_decl/extend1.mch
MACHINE
	extend1
OPERATIONS
	op_extend1 = skip
END
